2009-09-17  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_collect_or_expand): Output heap size in WARN()
	(before returning FALSE) for convenience.

2009-09-17  Ivan Maidanski <ivmai@mail.ru>
	(ivmai139.diff)

	* allchblk.c (GC_allochblk_nth): Use GC_PRIdPTR in WARN() format
	string.
	* pthread_support.c (start_mark_threads, GC_thr_init): Ditto.
	* win32_threads.c (GC_delete_thread): Ditto.
	* include/private/gc_priv.h (GC_PRIdPTR): New macro.
	* pthread_stop_world.c (GC_suspend_handler_inner): Remove
	unnecessary cast for WARN argument.
	* pthread_support.c (start_mark_threads): if pthread_create()
	failed then don't try to create other marker threads and (after
	printing a warning) adjust GC_markers and GC_parallel values; log
	GC_markers value (possibly adjusted) after that.

2009-09-16  Ivan Maidanski <ivmai@mail.ru>
	(ivmai140.diff)

	* win32_threads.c (start_mark_threads): if pthread_create() is
	failed then don't try to create other marker threads and (after
	printing a warning) adjust GC_markers and GC_parallel values.
	* win32_threads.c (mark_mutex_event, builder_cv, mark_cv): Move
	the definition upper (to be visible in start_mark_threads()).
	* win32_threads.c (start_mark_threads): if CreateThread() or
	_beginthreadex() is failed then don't try to create other marker
	threads and (after printing a warning) adjust GC_markers,
	GC_parallel values, and destroy the event objects (either only
	some for the uncreated threads if DONT_USE_SIGNALANDWAIT or all if
	not a single thread is created).
	* win32_threads.c (GC_thr_init): Log GC_markers value (possibly
	adjusted) after start_mark_threads() call.

2009-09-16  Ivan Maidanski <ivmai@mail.ru>
	
	* Makefile.am: Back remove "GC_" prefix for PTHREADS,
	DARWIN_THREADS, WIN32_THREADS (for configure.ac).

2009-09-16  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: Remove trailing spaces at EOLn; insert blank lines
	where missed.
	* doc/README: Expand all tabs to spaces; remove trailing spaces at