@@ -1,5 +1,10 @@
 2009-09-17  Ivan Maidanski <ivmai@mail.ru>
 
+	* Makefile: Replace "version.h" with "include/gc_version.h".
+	* include/gc_version.h: Ditto.
+
+2009-09-17  Ivan Maidanski <ivmai@mail.ru>
+
 	* alloc.c (GC_collect_or_expand): Output heap size in WARN()
 	(before returning FALSE) for convenience.
 
